# cloudnap

./: .dockerignore  .gitignore  Dockerfile  README.md  build-and-push.sh  config.yaml  deploy.sh  docker-compose.yaml  docker-swarm.yaml  env.example  nginx.conf  pyproject.toml  requirements.txt  run.py
app/: __init__.py  __main__.py  config.py
app/gateway/ApiGateway-python-sdk-2.0.6/: main.py
app/routes/: api.py  main.py
app/services/: cache_service.py  health_service.py  huawei_cloud_service.py  logging_service.py  scheduler_service.py  secrets_service.py
app/static/css/: style.css
app/static/js/: clusters.js  config.js  filters.js  main.js  scheduler.js  utils.js
app/templates/: base.html  health.html  index.html  logs.html
