[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudnap"
version = "0.1.0"
description = "Huawei Cloud Cluster Management Tool"
authors = [
    {name = "CloudNap Team", email = "team@cloudnap.dev"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-flask>=1.3.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
